--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^9.0.2",
     "next": "13.5.11",
     "react": "^18",
+    "react-date-picker": "^12.0.1",
     "react-dom": "^18",
     "styled-components": "^6.1.19"
   },
